--- a/WSL2.programs/tests/FirewallTest/FirewallTest.csproj
+++ b/WSL2.programs/tests/FirewallTest/FirewallTest.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -9,8 +9,29 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <COMReference Include="NetFwTypeLib">
+      <VersionMinor>0</VersionMinor>
+      <VersionMajor>1</VersionMajor>
+      <Guid>58fbcf7c-e7a9-467c-80b3-fc65e8fcca08</Guid>
+      <Lcid>0</Lcid>
+      <WrapperTool>tlbimp</WrapperTool>
+      <Isolated>false</Isolated>
+      <EmbedInteropTypes>true</EmbedInteropTypes>
+      <Aliases>test_NetFwTypeLib</Aliases>
+    </COMReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="NetFwTypeLib">
+      <Aliases>test_NetFwTypeLib</Aliases>
+    </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="6.8.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0" />
+    <PackageReference Include="Moq" Version="4.18.2" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -24,6 +45,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\libs\Firewall\Firewall.csproj" />
+    <ProjectReference Include="..\..\src\libs\WSL\WSL.csproj" />
   </ItemGroup>
 
 </Project>
