change to version for vstest

--- a/.github/workflows/dotnet-console-desktop.yml
+++ b/.github/workflows/dotnet-console-desktop.yml
@@ -49,7 +49,7 @@ jobs:
         Configuration: ${{ matrix.configuration }}
 
     - name: Run Firewall test
-      uses: microsoft/vstest-action@master
+      uses: microsoft/vstest-action@v1.0.0
       with:
         testAssembly: FirewallTest.dll
         searchFolder: ./WSL2.programs/tests/FirewallTest/bin/Debug/
