added platform to all project configuration

--- a/WSL2.programs/tests/WslTest/WslTest.csproj
+++ b/WSL2.programs/tests/WslTest/WslTest.csproj
@@ -8,6 +8,8 @@
     <IsPackable>false</IsPackable>
 
     <AnalysisLevel>6.0</AnalysisLevel>
+
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
