--- a/.github/workflows/dotnet-console-desktop.yml
+++ b/.github/workflows/dotnet-console-desktop.yml
@@ -14,7 +14,7 @@ env:
 
 
 jobs:
-  setups:
+  checkout:
     strategy:
       matrix:
         configuration: [Debug, Release]
@@ -27,15 +27,6 @@ jobs:
       with:
         fetch-depth: 0
     
-    - name: Install .NET Core
-      uses: microsoft/setup-msbuild@v1.1
-
-    - name: Setup MSBuild.exe
-      uses: microsoft/setup-msbuild@v1
-
-    - name: Setup VSTest
-      uses: darenm/Setup-VSTest@v1.2
-
     - name: Upload artifact
       uses: actions/upload-artifact@v3
       with:
@@ -45,7 +36,7 @@ jobs:
   restores:
     name: Restore Nuget solution
     runs-on: windows-2022
-    needs: [ setups ]
+    needs: [ checkout ]
     steps:
     - name: Download a setups artifact
       uses: actions/download-artifact@v3
@@ -70,6 +61,9 @@ jobs:
         configuration: [ Debug, Release ]
         platform: [ x64 ]
     steps:
+      - name: Setup MSBuild.exe
+        uses: microsoft/setup-msbuild@v1.1.3
+
       - name: Download a restores artifact
         uses: actions/download-artifact@v3
         with:
@@ -92,6 +86,9 @@ jobs:
       matrix:
         configuration: [ Debug, Release ]
     steps:
+      - name: Setup VSTest
+        uses: darenm/Setup-VSTest@v1.2
+
       - name: Download a build artifacts
         uses: actions/download-artifact@v3
         with:
@@ -112,6 +109,9 @@ jobs:
       matrix:
         configuration: [ Debug, Release ]
     steps:
+      - name: Setup VSTest
+        uses: darenm/Setup-VSTest@v1.2
+
       - name: Download a build artifacts
         uses: actions/download-artifact@v3
         with:
@@ -132,6 +132,9 @@ jobs:
       matrix:
         configuration: [ Debug, Release ]
     steps:
+      - name: Setup VSTest
+        uses: darenm/Setup-VSTest@v1.2
+
       - name: Download a build artifacts
         uses: actions/download-artifact@v3
         with:
