--- a/WSL2.programs/src/libs/Firewall/Firewall.csproj
+++ b/WSL2.programs/src/libs/Firewall/Firewall.csproj
@@ -8,24 +8,20 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <COMReference Include="NetFwTypeLib">
-      <VersionMinor>0</VersionMinor>
-      <VersionMajor>1</VersionMajor>
-      <Guid>58fbcf7c-e7a9-467c-80b3-fc65e8fcca08</Guid>
-      <Lcid>0</Lcid>
-      <WrapperTool>tlbimp</WrapperTool>
-      <Isolated>false</Isolated>
-      <EmbedInteropTypes>true</EmbedInteropTypes>
-    </COMReference>
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Microsoft.TeamFoundation.DistributedTask.Common.Contracts" Version="16.170.0" />
+    <PackageReference Include="Microsoft.TeamFoundationServer.Client" Version="16.170.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\WSL\WSL.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Interop.NetFwTypeLib">
+      <HintPath>..\..\Assemblies\Interop.NetFwTypeLib.dll</HintPath>
+    </Reference>
   </ItemGroup>
   
 </Project>
