--- a/.github/workflows/dotnet-console-desktop.yml
+++ b/.github/workflows/dotnet-console-desktop.yml
@@ -69,6 +69,7 @@ jobs:
     strategy:
       matrix:
         configuration: [ Debug, Release ]
+        platform: [ x64 ]
     steps:
       - name: Setup VSTest
         uses: darenm/Setup-VSTest@v1.2
@@ -82,7 +83,7 @@ jobs:
         uses: microsoft/vstest-action@v1.0.0
         with:
           testAssembly: FirewallTest.dll
-          searchFolder: ./WSL2.programs/tests/FirewallTest/bin/${{ matrix.configuration }}/
+          searchFolder: ${{ github.workspace }}/WSL2.programs/tests/FirewallTest/bin/${{ matrix.platform }}/${{ matrix.configuration }}/net6.0/
           runInParallel: true
 
   tests_strategies:
@@ -92,6 +93,7 @@ jobs:
     strategy:
       matrix:
         configuration: [ Debug, Release ]
+        platform: [ x64 ]
     steps:
       - name: Setup VSTest
         uses: darenm/Setup-VSTest@v1.2
@@ -105,7 +107,7 @@ jobs:
         uses: microsoft/vstest-action@v1.0.0
         with:
           testAssembly: StrategiesTest.dll
-          searchFolder: ./WSL2.programs/tests/StrategiesTest/bin/${{ matrix.configuration }}/
+          searchFolder: ${{ github.workspace }}/WSL2.programs/tests/StrategiesTest/bin/${{ matrix.platform }}/${{ matrix.configuration }}/net6.0/
           runInParallel: true
 
   tests_wsl:
@@ -115,6 +117,7 @@ jobs:
     strategy:
       matrix:
         configuration: [ Debug, Release ]
+        platform: [ x64 ]
     steps:
       - name: Setup VSTest
         uses: darenm/Setup-VSTest@v1.2
@@ -128,6 +131,6 @@ jobs:
         uses: microsoft/vstest-action@v1.0.0
         with:
           testAssembly: WslTest.dll
-          searchFolder: ./WSL2.programs/tests/WslTest/bin/${{ matrix.configuration }}/
+          searchFolder: ${{ github.workspace }}/WSL2.programs/tests/WslTest/bin/${{ matrix.platform }}/${{ matrix.configuration }}/net6.0/
           runInParallel: true
       
