--- a/WSL2.programs/tests/FirewallTest/FirewallTest.csproj
+++ b/WSL2.programs/tests/FirewallTest/FirewallTest.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\libs\Firewall\Firewall.csproj" />
     <ProjectReference Include="..\..\src\libs\WSL\WSL.csproj" />
+    <ProjectReference Include="..\HelperTest\HelperTest.csproj" />
   </ItemGroup>
 
 </Project>
