--- a/WSL2.programs/tests/StrategiesTest/StrategiesTest.csproj
+++ b/WSL2.programs/tests/StrategiesTest/StrategiesTest.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\libs\Strategies\Strategies.csproj" />
+    <ProjectReference Include="..\HelperTest\HelperTest.csproj" />
   </ItemGroup>
 
 </Project>
