--- a/WSL2.programs/tests/WslTest/WslTest.csproj
+++ b/WSL2.programs/tests/WslTest/WslTest.csproj
@@ -32,6 +32,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\libs\WSL\WSL.csproj" />
+    <ProjectReference Include="..\HelperTest\HelperTest.csproj" />
   </ItemGroup>
 
 </Project>
