--- a/WSL2.programs/tests/HelperTest/HelperTest.csproj
+++ b/WSL2.programs/tests/HelperTest/HelperTest.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
     <PackageReference Include="Moq" />
     <PackageReference Include="xunit.assert" />
   </ItemGroup>
