--- a/WSL2.programs/src/Portproxy/Properties/launchSettings.json
+++ b/WSL2.programs/src/Portproxy/Properties/launchSettings.json
@@ -1,8 +1,20 @@
 {
   "profiles": {
-    "Portproxy": {
+    "WSL": {
+      "commandName": "WSL2",
+      "distributionName": ""
+    },
+    "Portproxy list": {
       "commandName": "Project",
-      "commandLineArgs": "l"
+      "commandLineArgs": "-l"
+    },
+    "Portproxy delete": {
+      "commandName": "Project",
+      "commandLineArgs": "-d"
+    },
+    "Portproxy create": {
+      "commandName": "Project",
+      "commandLineArgs": "-c"
     }
   }
 }
