--- a/programs/src/libs/Ports/Ports.csproj
+++ b/programs/src/libs/Ports/Ports.csproj
@@ -8,14 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
-    <PackageReference Include="Moq" />
-    <PackageReference Include="xunit.assert" />
+    <PackageReference Include="Newtonsoft.Json" />
   </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\src\libs\Firewall\Firewall.csproj" />
-    <ProjectReference Include="..\..\src\libs\Ports\Ports.csproj" />
-    <ProjectReference Include="..\..\src\libs\WSL\WSL.csproj" />
-  </ItemGroup>
 </Project>
